# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/5.1/en/

Version 5.1.49

  - Fix for Bug#96442 (30151808), INCORRECT DATE ERROR WHEN CALLING GETMETADATA ON PREPARED STATEMENT.

Version 5.1.48

  - Fix for Bug#30035246, COMMUNITY README AND README.TXT FILES HAS THE WRONG YEAR (2018).

  - Fix for Bug#29998730, REGRESSION UNIT TESTS FAILS WHEN THE 8.0 SERVER'S CHARSET IS SET TO DEFAULT UTF8MB4.

  - WL#12942, Update README.md and add new CONTRIBUTING.md.

  - Fix for Bug#91435 (28268619), Improve DatabaseMetaData.getSQLKeywords() to include new reserved words.

  - Fix for Bug#95796 (29907618), Parameter metadata inferred incorrectly when procedure or function doesn't exist.

  - Fix for Bug#73774 (19531305), Can't execute a stored procedure if exists function with same name.

  - Fix for Bug#20913289, PSTMT.EXECUTEUPDATE() FAILS WHEN SQL MODE IS NO_BACKSLASH_ESCAPES.

  - Fix for Bug#80441 (22850444), SYNTAX ERROR ON RESULTSET.UPDATEROW() WITH SQL_MODE NO_BACKSLASH_ESCAPES.

  - Fix for Bug#92089 (28529781), PREPAREDSTATEMENT.SETTIMESTAMP NULLPOINTEREXCEPTION.

  - WL#13124, Support new utf8mb4 bin collation.

  - Fix for Bug#94585 (29452669), GETTABLENAME() RETURNS NULL FOR A QUERY HAVING COUNT(*) WITH JDBC DRIVER V8.0.12.

  - Fix for Bug#94101 (29277648), SETTING LOGSLOWQUERIES SHOULD NOT AUTOMATICALLY ENABLE PROFILESQL FOR QUERIES.
    Thanks to Florian Agsteiner for the contribution.

  - Fix for Bug#74690 (20010454), PROFILEREVENT HOSTNAME HAS NO GETTER().

  - Fix for Bug#70677 (17640628), CONNECTOR J WITH PROFILESQL - LOG CONTAINS LOTS OF STACKTRACE DATA.

  - Fix for Bug#41172 (11750577), PROFILEREVENT.PACK() THROWS ARRAYINDEXOUTOFBOUNDSEXCEPTION.

  - Fix for Bug#27453692, CHARACTERS GET GARBLED IN CONCAT() IN PS WHEN USECURSORFETCH=TRUE.

  - Fix for Bug#93590 (29054329), javax.net.ssl.SSLException: closing inbound before receiving peer's close_notify.

  - Fix for Bug#29329326, PLEASE AVOID SHOW PROCESSLIST IF POSSIBLE.
